<resources>
    <string name="app_name">Hefestos</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="cpf">CPF</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ainda_nao_tem_uma_conta">Ainda não tem uma conta?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="se_candidatar">Se candidatar</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="valor_ofertado_rs">Valor ofertado R$</string>
    <string name="contratar_bico">Contratar bico</string>
    <string name="ver_candidatos">Ver Candidatos</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="nome">Nome</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="e_mail">E-mail</string>
    <string name="cpf_invalido">CPF inválido</string>
</resources>