<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:paddingHorizontal="30dp"
    android:paddingVertical="40dp"
    android:gravity="center"
    tools:context=".UIs.RegisterActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="15dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingVertical="40dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/cadastre_se"
                android:textColor="@color/black_60"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:hint="@string/nome"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/editText_birthday"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:hint="@string/data_de_nascimento"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_name" />

            <EditText
                android:id="@+id/editText_cpf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:maxLength="11"
                android:hint="@string/cpf"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_birthday" />

            <TextView
                android:id="@+id/textView_invalid_cpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/cpf_invalido"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="@+id/editText_cpf"
                app:layout_constraintTop_toBottomOf="@+id/editText_cpf" />

            <ImageView
                android:id="@+id/imageView_cpf_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="@+id/editText_cpf"
                app:layout_constraintEnd_toEndOf="@+id/editText_cpf"
                app:layout_constraintTop_toTopOf="@+id/editText_cpf" />

            <EditText
                android:id="@+id/editText_email_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_cpf" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_email_address" />

            <ImageButton
                android:id="@+id/imageButton_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/ic_eye"
                app:layout_constraintBottom_toBottomOf="@+id/editText_password"
                app:layout_constraintEnd_toEndOf="@+id/editText_password"
                app:layout_constraintTop_toTopOf="@+id/editText_password" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/blue"
                android:text="@string/cadastre_se"
                app:layout_constraintTop_toBottomOf="@+id/editText_password"
                tools:layout_editor_absoluteX="20dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>