<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:paddingHorizontal="30dp"
    android:paddingTop="100dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_cpf"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:hint="@string/cpf"
                android:inputType="number"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:layout_editor_absoluteX="20dp" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_input"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_cpf"
                tools:layout_editor_absoluteX="20dp" />

            <ImageButton
                android:id="@+id/imageButton_see_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_eye"
                app:layout_constraintBottom_toBottomOf="@+id/editText_password"
                app:layout_constraintEnd_toEndOf="@+id/editText_password"
                app:layout_constraintTop_toTopOf="@+id/editText_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/blue"
                android:text="@string/entrar"
                app:layout_constraintTop_toBottomOf="@+id/editText_password"
                tools:layout_editor_absoluteX="20dp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/black_12"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                tools:layout_editor_absoluteX="20dp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/view">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ainda_nao_tem_uma_conta"
                    android:textAllCaps="true"
                    android:textColor="@color/black_40"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_button"
                android:backgroundTint="@color/blue"
                android:text="@string/cadastrar"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:layout_editor_absoluteX="20dp" />

            <View
                android:id="@+id/view_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="@color/black_12"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign_up"
                tools:layout_editor_absoluteX="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingHorizontal="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/view_2"
                app:layout_constraintEnd_toEndOf="@+id/view_2"
                app:layout_constraintStart_toStartOf="@+id/view_2"
                app:layout_constraintTop_toBottomOf="@+id/view_2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esqueceu_a_senha"
                    android:textAllCaps="true"
                    android:textColor="@color/light_blue"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>